# Banana-Music

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml
backend/: app_logging.py  auth_utils.py  config.py  database.py  deps.py  main.py  models.py  pyproject.toml  schema_version.py  schemas.py  seed.py
backend/plugins/: base.py  context.py  errors.py  loader.py
backend/routers/: admin.py  albums.py  artists.py  auth.py  history.py  home.py  library.py  playlists.py  plugins.py  queue.py  rest.py  search.py  tracks.py  upload.py
backend/services/: __init__.py  artist_names.py  download_tags.py  pipeline.py  plugin_search.py  track_likes.py  track_load_options.py  track_metadata_update.py  upload_hooks.py  upload_metadata_enrich.py
backend/tests/: conftest.py  test_skill_openapi_contract.py
backend/tests/api/: test_albums.py  test_api_surface.py  test_artists.py  test_auth.py  test_media_ext_download.py  test_playlists.py  test_plugin_parse_metadata.py  test_search.py  test_tracks.py  test_upload_create.py
backend/tests/unit/: test_audio_hash.py  test_auth_utils.py  test_database_slow_sql.py  test_plugin_context.py  test_queue_cleanup.py  test_queue_device_sync.py  test_track_metadata_update.py  test_upload_album_dir_script.py  test_upload_audio_dir_script.py  test_upload_utils.py
docs/: api.md  bulk-import.md  database-design.md  plugin-api.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: bulk_import.py  bulk_import_utils.py  dev-local.sh  reset_dev.py  (+5 more)
(+65 files in other folders)
